--- a/executive.html
+++ b/executive.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard Executivo - Grill Gestão</title>
+  <title>Dashboard Executivo - Gestão Financeira</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -14,10 +14,10 @@
   <header class="main-header">
     <div class="header-content">
       <div class="logo-section">
-        <div class="logo">
+        <a class="logo" href="index.html" title="Ir para a tela inicial">
           <i class="fas fa-chart-line"></i>
-          <span>Grill Gestão</span>
-        </div>
+          <span>Gestão Financeira</span>
+        </a>
         <p class="tagline">Dashboard Executivo</p>
       </div>
       <div class="header-stats">
