--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <header class="main-header">
     <div class="header-content">
       <div class="logo-section">
-        <div class="logo">
+        <a class="logo" href="index.html" title="Ir para a tela inicial">
           <span>Gestão Financeira</span>
-        </div>
-        <p class="tagline">Sistema completo de gestão empresarial</p>
+        </a>
+        <p class="tagline"></p>
       </div>
       <div class="header-stats">
         <div class="stat-item">
@@ -116,6 +116,29 @@
           <button onclick="navegarPara('dashboard')" class="primary-btn">
             Ir para Dashboard
           </button>
+        </div>
+
+        <div class="features-grid mt-4">
+          <div class="stat-card">
+            <h3>Gestão de pessoas e RH</h3>
+            <p>Ponto, folha e desempenho</p>
+          </div>
+          <div class="stat-card">
+            <h3>Precificação e Custos</h3>
+            <p>Simulação de custos e margens</p>
+          </div>
+          <div class="stat-card">
+            <h3>Gestão de Filiais</h3>
+            <p>Controle por unidades</p>
+          </div>
+          <div class="stat-card">
+            <h3>Comunicação Interna</h3>
+            <p>Chat, mural e documentos</p>
+          </div>
+          <div class="stat-card">
+            <h3>Segurança e Acessos</h3>
+            <p>Controle por usuário</p>
+          </div>
         </div>
       </div>
     </div>
